--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+  display : flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(to right, #4daf54 , #3d8880);
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
