--- a/src/component/searchbox/searchbox.styles.scss
+++ b/src/component/searchbox/searchbox.styles.scss
@@ -2,14 +2,14 @@
 
   width: 400px;
   height: 70px;
-  overflow: hidden;
+
   display : flex;
   align-items: center;
   justify-content: center;
   border-radius: 10px;
   border: none;
   outline:none;
-  transition: 5s;
+
   .searchbox__input{
     width: 100%;
     height: 100%;
@@ -17,8 +17,8 @@
     color: white;
     padding: 0px 20px;
     font-size: 30px;
-    display: none;
-    transition: 5s;
+    opacity: 0;
+    transition: 3s;
   }
   .searchbox__input.open{
     width: 100%;
@@ -28,19 +28,23 @@
     padding: 0px 20px;
     font-size: 30px;
     background: black;
-    display: unset;
-    transition: 5s;
+    opacity: 1;
+    transition: 3s;
+
   }
   .searchbox__btn{
 
-    width: 100px;
-    height: 70px;
+    padding: 20px 20px;
     border-radius: 15px;
     font-size: 25px;
     border: none;
     outline:none;
-    transition: 5s;
+    margin-right: 40%;
+    transition: 3s;
   }
+  .searchbox__btn.open{
+    margin-right:0;
 
+  }
 
 };
